--- a/package.json
+++ b/package.json
@@ -18,7 +18,8 @@
     "@popperjs/core": "^2.11.8",
     "@types/node": "^24.3.1",
     "bootstrap": "^5.3.8",
-    "vue": "^3.5.18"
+    "vue": "^3.5.18",
+    "vue-recaptcha-v3": "^2.0.1"
   },
   "devDependencies": {
     "@vitejs/plugin-vue": "^6.0.1",
